# ioguard

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  SECURITY.md  SUPPORT.md  project.yml
.claude/skills/c23-standards/: SKILL.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/dual-compiler-strategy/: SKILL.md
.claude/skills/io-uring-patterns/: SKILL.md
.claude/skills/ocprotocol/: SKILL.md
.claude/skills/rfc-reference/: SKILL.md
.claude/skills/security-coding/: SKILL.md
.claude/skills/simd-optimization/: SKILL.md
.claude/skills/storage-patterns/: SKILL.md
.claude/skills/wolfsentry-idps/: SKILL.md
.claude/skills/wolfssl-api/: SKILL.md
.github/: CI_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  DEPLOYMENT_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  containers.yml  dev-ci.yml
deploy/podman/: Containerfile  DELIVERY_SUMMARY.md  Dockerfile.build  Dockerfile.test  Makefile  README.md  START_HERE.md  compose.yaml
docs/: README.md  REFACTORING_PLAN.md
docs/agile/: SPRINTS.md
docs/architecture/: CISCO_COMPATIBILITY_GUIDE.md  GNUTLS_API_AUDIT.md  MODERN_ARCHITECTURE.md  PRIORITY_STRING_PARSER.md  PROTOCOL_REFERENCE.md  README.md  WOLFSSL_ECOSYSTEM.md
docs/benchmarks/: README.md  wolfssl_validation_summary.md
docs/draft/: COMPILER_TOOLCHAIN_RECOMMENDATIONS.md  compression-in-vpn-tunnels.md  grpc-for-ipc-in-c.md
docs/en/: 02-protocol.md  03-configuration.md  04-tls-dtls.md  05-authentication.md  07-security.md  08-development.md  09-rfc-compliance.md  10-monitoring.md  11-cli-reference.md  README.md
docs/plans/: 2026-03-07-ioguard-architecture-design.md  2026-03-07-ringwall-architecture-design.md  2026-03-07-sprint-1-foundation.md  2026-03-07-sprint-2-tls-auth.md  2026-03-07-wolfguard-architecture-design.md  2026-03-08-ioguard-rebranding-and-s5-design.md  2026-03-08-ioguard-rebranding-plan.md  2026-03-08-ringwall-rebranding-and-s5-design.md  2026-03-08-ringwall-rebranding-plan.md  2026-03-08-sprint-4-dtls-compression.md  2026-03-08-sprint-5-storage-security.md  2026-03-08-sprint-6-vertical-integration.md  2026-03-10-sprint-7-auth-observability.md  2026-03-11-ioguard-legacy-name-inventory.md  2026-03-11-ioguard-namespace-wave1-plan.md  2026-03-11-ioguard-naming-options.md  BACKLOG.md  README.md  ROADMAP.md
docs/rfc/: README.md
docs/ru/: 02-protocol.md  03-configuration.md  04-tls-dtls.md  05-authentication.md  06-deployment.md  07-security.md  09-rfc-compliance.md  10-monitoring.md  11-cli-reference.md  README.md
docs/todo/: CURRENT.md  IMPORTANT_AI_TODO_PROMPT.md
scripts/: quality.sh  run-coverage.sh  run-fuzz-cstp.sh  run-fuzz-http.sh  run-fuzz-ipc.sh  run-fuzz-session-key.sh  run-fuzz-template.sh  run-fuzz-toml.sh  run-pmi-psi.sh
scripts/maintenance/: rename_artifact_wave1.py  rename_namespace_wave13.py  rename_namespace_wave14_build.py  rename_namespace_wave16_storage.py  rename_namespace_wave18_config_session_build.py  rename_namespace_wave19_fdpass_process.py  verify_legacy_artifacts.sh  verify_namespace_wave13.sh  verify_namespace_wave14_build.sh  verify_namespace_wave16_storage.sh  verify_namespace_wave18_config_session_build.sh  verify_namespace_wave19_fdpass_process.sh
src/auth/: auth_backend.c  auth_backend.h  cert_auth.c  cert_auth.h  ldap_auth.c  ldap_auth.h  pam.c  pam.h  radius.c  radius.h  totp.c  totp.h
src/config/: config.c  config.h
src/core/: conn_data.c  conn_data.h  conn_timer.c  conn_timer.h  conn_tls.c  conn_tls.h  main.c  main.h  process.c  process.h  secmod.c  secmod.h  security_hooks.c  security_hooks.h  session.c  session.h  shutdown.c  shutdown.h  worker.c  worker.h  worker_loop.c  worker_loop.h
src/crypto/: priority_parser.c  priority_parser.h  session_cache.c  session_cache.h  tls_abstract.c  tls_abstract.h  tls_gnutls.c  tls_gnutls.h  tls_wolfssl.c  tls_wolfssl.h
src/io/: uring.c  uring.h
src/ipc/: fdpass.c  fdpass.h  messages.c  messages.h  transport.c  transport.h
src/log/: iog_log.c  iog_log.h  rw_log.c  rw_log.h
src/metrics/: iog_metrics.c  iog_metrics.h  prometheus.c  prometheus.h
src/network/: channel.c  channel.h  compress.c  compress.h  compress_lz4.c  compress_lz4.h  compress_lzs.c  compress_lzs.h  cstp.c  cstp.h  dns.c  dns.h  dpd.c  dpd.h  dtls.c  dtls.h  dtls_headers.c  dtls_headers.h  dtls_keying.c  dtls_keying.h  http.c  http.h  ipam.c  ipam.h  tun.c  tun.h  xml_auth.c  xml_auth.h
src/security/: firewall.c  firewall.h  landlock.c  landlock.h  sandbox.c  sandbox.h  wolfsentry.c  wolfsentry.h
src/storage/: mdbx.c  mdbx.h  migrate.c  migrate.h  sqlite.c  sqlite.h  vault.c  vault.h
src/utils/: memory.c  memory.h
tests/bench/: bench_common.h  bench_cstp.c  bench_session.c  benchmark.sh  compare_results.sh  generate_certs.sh
tests/fixtures/: ioguard.toml  ringwall.toml  wolfguard.toml
tests/fuzz/: fuzz_cstp.c  fuzz_http.c  fuzz_ipc.c  fuzz_session_key.c  fuzz_toml.c
tests/integration/: test_auth_flow.c  test_auth_mfa.c  test_data_path.c  test_dtls_channel.c  test_ipc_roundtrip.c  test_storage.c  test_vpn_flow.c
tests/poc/: README.md  benchmark.sh  compare.sh  run_tests.sh  tls_poc_client.c  tls_poc_server.c
tests/unit/: test_auth_backend.c  test_auth_cert.c  test_auth_ldap.c  test_auth_pam.c  test_auth_radius.c  test_channel.c  test_compress.c  test_compress_cstp.c  test_compress_lz4.c  test_compress_lzs.c  test_config_toml.c  test_conn_data.c  test_conn_timer.c  test_conn_tls.c  test_cstp.c  test_dns.c  test_dpd.c  test_dtls.c  test_dtls_headers.c  test_dtls_keying.c  test_fdpass.c  test_firewall.c  test_http.c  test_io_callback.c  test_io_uring.c  test_ipam.c  test_ipc_messages.c  test_ipc_transport.c  test_landlock.c  test_log.c  test_main_bootstrap.c  test_memory.c  test_priority_parser.c  test_process.c  test_prometheus.c  test_sandbox.c  test_secmod.c  test_secmod_storage.c  test_security_hooks.c  test_session.c  (+13 more)
(+34 files in other folders)
